# OpenGL

./: CMakeLists.txt
Projection_NatteRobbins/: projection.c
Solver/: CMakeLists.txt  Cube.h  Operations.h  Rubik.h  Solver.h  corner_orientation.cpp  corner_orientation.h  corner_permutation.cpp  corner_permutation.h  corners.cpp  corners.h  edges.cpp  edges.h  group.cpp  group.h  indexing.cpp  indexing.h  main.cpp  nibble.h  prune.h  pruning_info.h  shader.cpp  shader.hpp
Texturas/: Cube.h  Operations.h  Rubik.h  main.cpp
Texturas3/: CMakeLists.txt  cubo.h  main.cpp
Tutorial_01/: main.cpp
Tutorial_03/: main.cpp
Tutorial_04/: CMakeLists.txt  main.cpp
Tutorial_05/: CMakeLists.txt  main.cpp
Tutorial_06/: CMakeLists.txt  main.cpp
Tutorial_07/: CMakeLists.txt  main.cpp
Tutorial_08/: CMakeLists.txt  main.cpp
Tutorial_09/: CMakeLists.txt  main.cpp  shader.cpp
Tutorial_10/: CMakeLists.txt  main.cpp
Tutorial_11/: CMakeLists.txt  display.cpp
