add_subdirectory( Projection_NatteRobbins )
add_subdirectory( Solver )
add_subdirectory( Texturas )
add_subdirectory( Texturas3 )
add_subdirectory( Tutorial_01 )
add_subdirectory( Tutorial_02 )
add_subdirectory( Tutorial_03 )
add_subdirectory( Tutorial_04 )
add_subdirectory( Tutorial_05 )
add_subdirectory( Tutorial_06 )
add_subdirectory( Tutorial_07 )
add_subdirectory( Tutorial_08 )
add_subdirectory( Tutorial_09 )
add_subdirectory( Tutorial_10 )
add_subdirectory( Tutorial_11 )


add_subdirectory( hw0 )


